# SNSDL

./: CMakeLists.txt  README.md
src/: error.cpp  error.h  main.cpp  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  window.cpp  window.h
